turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:23: error: type mismatch;
 found   : java.awt.Color
 required: Int
	rule(state)(colors(pos))(MVT_SUIVANT) match
                          ^